Fix piled segment rendering and scrolling on small screens in login view

--- a/resources/sass/auth.scss
+++ b/resources/sass/auth.scss
@@ -1,11 +1,13 @@
 .ui.grid.auth {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     background: rgb(240, 240, 240);
-    z-index: -5;
+    z-index: 1;
+    position: relative;
 
     .column {
+        margin: 0.5em;
         max-width: 500px;
     }
 
